@@ -42,6 +42,9 @@
     layout.
 29. As actions are not shown disabled, they should perform at least some
     indicatative action.
+30. For consistency with default web-ui, show standard players before group
+    players in toolbar and 'Manage players' dialog.
+31. 'Set sleep for all players' only applies to non-group players.
 
 0.9.7
 -----
